WebUI: Fix context menu long press on mobile
This prevent Safari from attempting to open the link in a preview.

--- a/src/webui/www/private/css/style.css
+++ b/src/webui/www/private/css/style.css
@@ -527,8 +527,10 @@ ul.filterList {
     padding-left: 0;
 }
 
-ul.filterList a {
+ul.filterList a,
+ul.filterList span.link {
     color: var(--color-text-default);
+    cursor: pointer;
     display: block;
     overflow: hidden;
     padding: 4px 6px;
